--- a/public/assets/css/libreta.css
+++ b/public/assets/css/libreta.css
@@ -22,16 +22,19 @@ header {
 .logo {
         border: 1px;
 }
+.clearfix{
+    overflow: hidden;
+}
  
 .col1 {
     /*background-color:red;*/
-    height:800px;
-        width: 430px;
-        float: left;
+    height:850px;
+    width: 430px;
+    float: left;
 }
  
 .col2 {
-    height:800px;
+    height:850px;
      width: 220px;
       float: right;
 }
